<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/loginScreen">

     <Button
            android:text="@string/login_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/login_button"
            app:layout_constraintTop_toBottomOf="@+id/password_text"
            app:layout_constraintStart_toStartOf="@+id/password_text"
            app:layout_constraintEnd_toEndOf="@+id/password_text"
            android:layout_marginTop="24dp"
            android:textColor="@android:color/black"
            />

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:ems="10"
            android:id="@+id/password_text"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/password"
            android:autofillHints=""
            app:layout_constraintTop_toBottomOf="@+id/email_text"
            app:layout_constraintEnd_toEndOf="@+id/email_text"
            app:layout_constraintStart_toStartOf="@+id/email_text"
            android:layout_marginTop="24dp" />

    <EditText
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/email_text"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="24dp"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/person" />

    <TextView
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="#000000" />

    <Button
            android:text="@string/sign_up_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/sign_up_button"
            app:layout_constraintTop_toBottomOf="@+id/login_button"
            app:layout_constraintStart_toStartOf="@+id/login_button"
            app:layout_constraintEnd_toEndOf="@+id/login_button"
            android:layout_marginTop="24dp"
            android:textColor="@android:color/black" />
</androidx.constraintlayout.widget.ConstraintLayout>