<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <EditText
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:ems="10"
            android:id="@+id/password_text"
            android:paddingLeft="15dp"
            android:textStyle="bold"
            android:textSize="26sp"
            android:background="#0096FF"
            android:textColor="#FFFFFF"
            app:layout_constraintTop_toBottomOf="@+id/email_text"
            app:layout_constraintStart_toStartOf="@+id/email_text"
            app:layout_constraintEnd_toEndOf="@+id/email_text"
            android:layout_marginTop="32dp" />

    <EditText
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:ems="10"
            android:id="@+id/email_text"
            android:paddingLeft="15dp"
            android:textStyle="bold"
            android:textSize="26sp"
            android:background="#0096FF"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/registration_text" />

    <TextView
            android:text="@string/registration_form_text"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:id="@+id/registration_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="26sp"
            android:textColor="#FFFFFF"
            android:background="#5271ff" />

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/register_button"
            app:layout_constraintTop_toBottomOf="@+id/password_text"
            app:layout_constraintEnd_toEndOf="@+id/password_text"
            android:layout_marginTop="16dp"
            android:text="@string/register"
            android:backgroundTint="#00FF00"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="#ffffff" />

</androidx.constraintlayout.widget.ConstraintLayout>