<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <EditText
            android:id="@+id/update_text_name"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:inputType="text"
            android:drawableStart="@drawable/ic_baseline_electric_scooter_24"
            android:paddingLeft="5dp"
            android:ems="10"
            android:background="@drawable/edittext_border"
            android:hint="@string/update_scooter_name"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:autofillHints=""
            app:layout_constraintTop_toBottomOf="@id/scooter_update_camera"
            app:layout_constraintHorizontal_bias="0.557"
            android:layout_marginTop="32dp" />

    <Button
            android:id="@+id/cancel_update_button"
            android:text="@string/cancel_update_ride_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/update_text_location"
            app:layout_constraintTop_toBottomOf="@+id/update_text_location"
            android:layout_marginTop="24dp"
            android:layout_marginStart="16dp" />

    <TextView
            android:id="@+id/update_text_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:textSize="22dp"
            android:textStyle="bold"
            android:background="@drawable/edittext_border"
            android:drawableStart="@drawable/ic_baseline_add_location_24"
            android:paddingLeft="5dp"
            app:layout_constraintTop_toBottomOf="@+id/update_text_name"
            app:layout_constraintStart_toStartOf="@+id/update_text_name"
            app:layout_constraintEnd_toEndOf="@+id/update_text_name"
            android:layout_marginTop="52dp"
            app:layout_constraintHorizontal_bias="0.0" />

    <Button
            android:id="@+id/update_ride_button"
            android:text="@string/update_ride_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/update_text_location"
            app:layout_constraintEnd_toEndOf="@+id/update_text_location"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp" />

    <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:id="@+id/scooter_update_image_view"
            tools:srcCompat="@tools:sample/avatars"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" />

    <ImageButton
            android:layout_width="83dp"
            android:layout_height="76dp"
            app:srcCompat="@drawable/ic_photo_camera"
            android:id="@+id/scooter_update_camera"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scooter_update_image_view"
            android:layout_marginTop="32dp"
            tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>
